--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -23,6 +23,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="com.itaas.ankit.snippetviewer.FragmentPreferences"
+            android:label="Settings" >
+        </activity>
     </application>
 
 </manifest>
