--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.itaas.ankit.snippetviewer.MainActivity"
+            android:name="com.itaas.ankit.snippetviewer.activity.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,7 +24,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.itaas.ankit.snippetviewer.FragmentPreferences"
+            android:name="com.itaas.ankit.snippetviewer.activity.FragmentPreferences"
             android:label="Settings" >
         </activity>
     </application>
